--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.4.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "src/node_modules/.bin/vite",
+    "build": "src/node_modules/.bin/vite build",
+    "preview": "src/node_modules/.bin/vite preview"
   },
   "dependencies": {
     "@dhdbstjr98/gif.js": "^1.0.2",
