--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "glfx-es6": "^0.0.3"
   },
   "devDependencies": {
-    "vite": "^4.3.9",
-    "vite-plugin-singlefile": "^0.13.5"
+    "vite": "^4.3.9"
   }
 }
