--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "petpet-js",
   "private": true,
-  "version": "0.9.1",
+  "version": "0.10.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,7 +13,8 @@
     "croppr": "^2.3.1",
     "expr-eval": "^2.0.2",
     "gifuct-js": "^2.1.2",
-    "glfx-es6": "^0.0.3"
+    "glfx-es6": "^0.0.3",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "devDependencies": {
     "vite": "^4.3.9",
