--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - preview
 
 jobs:
   build:
@@ -30,29 +29,21 @@ jobs:
           name: production-files
           path: ./dist
 
-  deploy_gh_pages:
-    name: Deploy to GitHub Pages
-    needs:
-      - build
+  deploy:
+    name: Deploy
+    needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/preview'
+    if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: Download production files
+      - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: production-files
           path: ./dist
 
-      - name: Copy preview files
-        run: cp -r preview/* ./production-files
-        if: github.ref == 'refs/heads/preview'
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add -A
-          git commit -m "Update gh-pages with main and preview files"
-          git push origin HEAD
-
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
