--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -47,7 +47,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: build
+    needs: [ build, copy ]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: preview-files
-          path: ./dist
+          path: ./preview
 
       - name: Download production-ready build files
         uses: actions/download-artifact@v3
