--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install_editor": "cd ./editor && npm i"
   },
   "dependencies": {
     "@dhdbstjr98/gif.js": "^1.0.2",
