--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "croppr": "^2.3.1",
     "expr-eval": "^2.0.2",
     "gifuct-js": "^2.1.2",
-    "glfx-es6": "^0.0.3",
-    "vite-plugin-pwa": "^0.16.4"
+    "glfx-es6": "^0.0.3"
   },
   "devDependencies": {
     "vite": "^4.3.9",
-    "vite-plugin-static-copy": "^0.17.0"
+    "vite-plugin-static-copy": "^0.17.0",
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
