--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -51,7 +51,8 @@ jobs:
 
   deploy:
     name: Deploy to github page
-    needs: [ build, copy ]
+#    needs: [ build, copy ]
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
