--- a/editor/package.json
+++ b/editor/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fabric": "5.3.0",
     "file-saver": "^2.0.5",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "localforage": "^1.10.0"
   }
 }
