Fix: Editor API Action: workingDirectory

--- a/.github/workflows/deploy-editor-api.yml
+++ b/.github/workflows/deploy-editor-api.yml
@@ -18,6 +18,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           wranglerVersion: latest
+          workingDirectory: "editor/api"
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           secrets: |
