--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "petpet-js",
   "private": true,
-  "version": "0.14.1",
+  "version": "0.15.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,11 +14,12 @@
     "croppr": "^2.3.1",
     "expr-eval": "^2.0.2",
     "gifuct-js": "^2.1.2",
-    "glfx-es6": "^0.0.3"
+    "glfx-es6": "^0.0.3",
+    "localforage": "^1.10.0"
   },
   "devDependencies": {
     "vite": "^4.3.9",
-    "vite-plugin-static-copy": "^0.17.0",
-    "vite-plugin-pwa": "^0.16.4"
+    "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-static-copy": "^0.17.0"
   }
 }
